--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 "owner": "629602024429715457",
-"token": "ODYzNTI1NDcxOTk5NDkyMTU2.GH_nc0.X3HSMSuiIti5OfJ3cIQdbFvHEOpop1HFHWI_RI",
+"token": "",
 "owner": "uzamzbyg0",
 "coowner": "A9gWcDuf",
 "boss": "WMj8YUox",
